--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,6 +56,12 @@
                 android:label="@string/app_name" >
         </activity>
 
+        <activity
+                android:name="com.cellaflora.iact.ConferenceSchedule"
+                android:screenOrientation="portrait"
+                android:label="@string/app_name" >
+        </activity>
+
         <service android:name="com.parse.PushService" />
         <receiver android:name="com.parse.ParseBroadcastReceiver">
             <intent-filter>
